[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "dali_renderer"
description = "Powerful rendering of your source code."
readme = "README.md"
requires-python = ">=3.7"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "fz0x1", email = "me@fz0x1.wtf" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beautifulsoup4~=4.11.1",
  "cairocffi~=1.4.0",
  "xcffib~=1.2.0",
  "CairoSVG~=2.5.2",
  "cffi~=1.15.1",
  "cssselect2~=0.7.0",
  "defusedxml~=0.7.1",
  "lxml~=4.9.2",
  "pycparser~=2.21",
  "Pygments~=2.14.0",
  "soupsieve~=2.3.2.post1",
  "tinycss2~=1.2.1",
  "webencodings~=0.5.1"
]

dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/foozzi/dali#readme"
Issues = "https://github.com/foozzi/dali/issues"
Source = "https://github.com/foozzi/dali"

[tool.hatch.version]
path = "src/dali_renderer/__about__.py"

[tool.ruff]
target-version = "py310"
line-length = 120
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports=true
python_version = "3.7"
strict_optional = true
check_untyped_defs = true
disallow_untyped_calls = true
follow_imports = "normal"
follow_imports_for_stubs = true

[tool.ruff.isort]
known-first-party = ["hatch", "hatchling"]

[tool.hatch.envs.default]
platforms = ["linux", "macos"]

[tool.hatch.envs.test]
detached = true
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
test = "pytest"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=dali_renderer"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.hatch.envs.doc]
detached = true
dependencies = [
  "pdoc"
]
[tool.hatch.envs.doc.scripts]
gen = "pdoc --show-source --logo ../static/logo.png --search ./src/dali_renderer -o ./docs"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=22.6.0",
  "mypy>=0.990",
  "ruff>=0.0.202",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --config-file pyproject.toml --show-column-numbers --non-interactive {args:src/dali_renderer}"
style = [
  "ruff {args:src/dali_renderer}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:src/dali_renderer}",
  "style",
]
all = [
  "typing",
  "style"
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.*",
  "/tests",
  "/pytest.ini",
  "/docs",
  "/static"
]

[tool.hatch.build]
dev-mode-dirs = ["."]
artifacts = [
  "/assets"
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/dali_renderer/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
